--- a/packages/encrypt-upload-client/tsconfig.json
+++ b/packages/encrypt-upload-client/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "./dist",    // fix`
-    "rootDir": "./src"     // fix`
-  },
   "files": [],
   "references": [
     {
@@ -25,5 +21,5 @@
       "path": "../eslint-config-w3up"
     }
   ],
-  "exclude": ["./dist"]
+  "exclude": ["lit-actions"]
 }
