--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -6,14 +6,14 @@
     "allowJs": true,
     "checkJs": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "Node16",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "noEmit": true,
     "isolatedModules": true,
     "removeComments": false,
     // module resolution
     "esModuleInterop": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "Node16",
     // linter checks
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
