--- a/packages/ucn/package.json
+++ b/packages/ucn/package.json
@@ -75,6 +75,7 @@
     "p-retry": "^6.2.1"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.10",
     "c8": "^10.1.3",
     "mocha": "^11.1.0"
   },
