--- a/packages/ucn/package.json
+++ b/packages/ucn/package.json
@@ -14,6 +14,10 @@
       "types": "./dist/agent.d.ts",
       "import": "./dist/agent.js"
     },
+    "./api": {
+      "types": "./dist/api.d.ts",
+      "import": "./dist/api.js"
+    },
     "./block": {
       "types": "./dist/block.d.ts",
       "import": "./dist/block.js"
@@ -30,6 +34,14 @@
       "types": "./dist/revision.d.ts",
       "import": "./dist/revision.js"
     },
+    "./server": {
+      "types": "./dist/server/index.d.ts",
+      "import": "./dist/server/index.js"
+    },
+    "./server/api": {
+      "types": "./dist/server/api.d.ts",
+      "import": "./dist/server/api.js"
+    },
     "./value": {
       "types": "./dist/value.d.ts",
       "import": "./dist/value.js"
@@ -45,8 +57,8 @@
     "lint": "eslint '**/*.{js,ts}' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "test": "npm run test:node",
-    "test:node": "mocha",
-    "coverage": "c8 --reporter text --reporter html npm run test"
+    "test:node": "vitest",
+    "coverage": "vitest --coverage"
   },
   "keywords": [
     "mutable",
@@ -61,23 +73,24 @@
   "author": "Alan Shaw",
   "license": "Apache-2.0 OR MIT",
   "dependencies": {
-    "@ipld/dag-ucan": "^3.4.5",
+    "@ipld/dag-cbor": "catalog:",
+    "@ipld/dag-ucan": "catalog:",
     "@ucanto/client": "catalog:",
     "@ucanto/core": "catalog:",
     "@ucanto/interface": "catalog:",
     "@ucanto/principal": "catalog:",
+    "@ucanto/server": "catalog:",
     "@ucanto/transport": "catalog:",
     "@web3-storage/clock": "^0.4.1",
     "@web3-storage/pail": "^0.6.0",
     "hashlru": "^2.3.0",
     "multiformats": "catalog:",
-    "p-defer": "^4.0.1",
-    "p-retry": "^6.2.1"
+    "p-defer": "catalog:",
+    "p-retry": "catalog:"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "c8": "^10.1.3",
-    "mocha": "^11.1.0"
+    "@vitest/coverage-v8": "3.1.1",
+    "vitest": "^3.1.1"
   },
   "eslintConfig": {
     "extends": [
