fix: set correct url for upload service

--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -180,7 +180,8 @@
       "docs",
       "docs-generated",
       "coverage",
-      "src/types.js"
+      "src/types.js",
+      "browser.min.js"
     ]
   },
   "directories": {
