--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -29,6 +29,7 @@
     },
     "./principal/ed25519": {
       "types": "./dist/principal/ed25519.d.ts",
+      "node": "./dist/principal/ed25519.js", 
       "import": "./dist/principal/ed25519.js"
     },
     "./principal/rsa": {
