--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -117,6 +117,7 @@
     "test-:browser": "playwright-test --runner mocha 'test/**/!(*.node).test.js'",
     "mock:bucket-0-200": "PORT=8989 STATUS=200 node test/helpers/bucket-server.js",
     "mock:bucket-1-200": "PORT=8990 STATUS=200 node test/helpers/bucket-server.js",
+    "mock:bucket-2-200": "PORT=8991 STATUS=200 node test/helpers/bucket-server.js",
     "mock:receipts-server": "PORT=9201 node test/helpers/receipts-server.js",
     "mock:gateway-server": "PORT=5001 node test/helpers/gateway-server.js",
     "attw": "attw --pack .",
