--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storacha/encrypt-upload-client",
   "type": "module",
-  "version": "0.0.34",
+  "version": "0.0.16",
   "license": "Apache-2.0 OR MIT",
   "description": "Client for upload and download encrypted files",
   "author": "Storacha",
@@ -34,12 +34,24 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
-    "./crypto/adapters": {
-      "types": "./dist/crypto-adapters/node-crypto-adapter.d.ts",
-      "import": "./dist/crypto-adapters/node-crypto-adapter.js"
+    "./node": {
+      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
+      "require": "./dist/crypto-adapters/node-crypto-adapter.js"
+    },
+    "./browser": {
+      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
+      "require": "./dist/crypto-adapters/browser-crypto-adapter.js"
+    },
+    "./crypto-adapters/browser-crypto-adapter": {
+      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
+      "types": "./dist/crypto-adapters/browser-crypto-adapter.d.ts"
+    },
+    "./crypto-adapters/node-crypto-adapter": {
+      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
+      "types": "./dist/crypto-adapters/node-crypto-adapter.d.ts"
     },
     "./types": "./dist/types.js"
   },
