--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -20,24 +20,25 @@
     "@ipld/dag-json": "catalog:",
     "@ipld/dag-ucan": "catalog:",
     "@sentry/nextjs": "8.35.0",
+    "@storacha/access": "workspace:^",
+    "@storacha/capabilities": "workspace:^",
+    "@storacha/client": "workspace:^",
+    "@storacha/did-mailto": "workspace:^",
+    "@storacha/ui-react": "workspace:^",
     "@tailwindcss/postcss": "catalog:",
     "@ucanto/client": "catalog:",
     "@ucanto/core": "catalog:",
     "@ucanto/interface": "catalog:",
     "@ucanto/transport": "catalog:",
-    "@storacha/ui-react": "workspace:^",
-    "@storacha/access": "workspace:^",
-    "@storacha/capabilities": "workspace:^",
     "@web3-storage/content-claims": "catalog:",
     "@web3-storage/data-segment": "catalog:",
-    "@storacha/did-mailto": "workspace:^",
-    "@storacha/client": "workspace:^",
     "archy": "^1.0.0",
     "ariakit-utils": "catalog:",
     "blueimp-md5": "^2.19.0",
     "linkdex": "^3.0.0",
     "multiformats": "catalog:",
     "next": "catalog:",
+    "next-plausible": "^3.12.4",
     "nft.storage": "^7.1.1",
     "p-retry": "^6.2.0",
     "react": "catalog:",
