--- a/packages/upload-api/package.json
+++ b/packages/upload-api/package.json
@@ -130,6 +130,7 @@
     "@storacha/capabilities": "workspace:^",
     "@storacha/did-mailto": "workspace:^",
     "@storacha/filecoin-api": "workspace:^",
+    "@storacha/indexing-service-client": "2.2.0-rc.3",
     "@ucanto/client": "catalog:",
     "@ucanto/interface": "catalog:",
     "@ucanto/principal": "catalog:",
