feat!: browser encryption adapter + pkp signing for encryption client (#262)
## Browser Compatibility, PKP Signing & Enhancements for
`@storacha/encrypt-upload-client`

### Main Changes

- **Added BrowserCryptoAdapter**  
New adapter using the Web Crypto API for browser encryption/decryption
and using `AES-CTR` to make it compatible with Browsers and support
content streaming.

- **Async CryptoAdapter Interface**  
Both Node and browser adapters now use async methods for encryption and
decryption.

- **Improved Exports**  
Adapters are now imported via subpaths (`/node`, `/browser`). The main
entry only exports cross-platform code (e.g., `create`), making it
possible to use the library in web apps.

- **PKP & Custom Signer Support**  
Supports traditional wallet private key signers and works with PKP and
custom signers.

- **Bug Fixes**  
Fixed the Authority parameter in the Lit Action access validation,
preventing `.did is not a function` errors.
Fixed decryption invocation and delegation validations in the Lit
Action.
:warning: Encrypted files should not be published to Filecoin by
default.

--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -34,12 +34,24 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
-    "./crypto/adapters": {
-      "types": "./dist/crypto-adapters/node-crypto-adapter.d.ts",
-      "import": "./dist/crypto-adapters/node-crypto-adapter.js"
+    "./node": {
+      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
+      "require": "./dist/crypto-adapters/node-crypto-adapter.js"
+    },
+    "./browser": {
+      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
+      "require": "./dist/crypto-adapters/browser-crypto-adapter.js"
+    },
+    "./crypto-adapters/browser-crypto-adapter": {
+      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
+      "types": "./dist/crypto-adapters/browser-crypto-adapter.d.ts"
+    },
+    "./crypto-adapters/node-crypto-adapter": {
+      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
+      "types": "./dist/crypto-adapters/node-crypto-adapter.d.ts"
     },
     "./types": "./dist/types.js"
   },
@@ -50,7 +62,8 @@
     "lint:fix": "tsc --build && eslint '**/*.{js,ts}' --fix && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "build-actions": "node lit-actions/esbuild.js",
     "attw": "attw --pack .",
-    "rc": "npm version prerelease --preid rc"
+    "rc": "npm version prerelease --preid rc",
+    "test": "node --test test/*.spec.js"
   },
   "dependencies": {
     "@ipld/car": "catalog:",
