feat(blob-index): add a simple CLI

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "packageManager": "pnpm@10.1.0+sha512.c89847b0667ddab50396bbbd008a2a43cf3b581efd59cf5d9aa8923ea1fb4b8106c041d540d08acb095037594d73ebc51e1ec89ee40c88b30b8a66c0fae0ac1b",
   "scripts": {},
   "devDependencies": {
-    "@nx/next": "20.3.2",
     "@nx/devkit": "20.3.2",
     "@nx/js": "catalog:",
+    "@nx/next": "20.3.2",
     "@types/npm-registry-fetch": "^8.0.7",
     "depcheck": "catalog:",
     "eslint": "catalog:",
@@ -32,7 +32,11 @@
       "hd-scripts>@typescript-eslint/eslint-plugin": "catalog:",
       "hd-scripts>@typescript-eslint/parser": "catalog:",
       "eslint-config-standard-with-typescript>@typescript-eslint/eslint-plugin": "catalog:",
-      "eslint-config-standard-with-typescript>@typescript-eslint/parser": "catalog:"
+      "eslint-config-standard-with-typescript>@typescript-eslint/parser": "catalog:",
+      "@storacha/blob-index": "link:"
     }
+  },
+  "dependencies": {
+    "@storacha/blob-index": "link:"
   }
 }
