--- a/packages/encrypt-upload-client/tsconfig.spec.json
+++ b/packages/encrypt-upload-client/tsconfig.spec.json
@@ -4,7 +4,8 @@
   "exclude": [
     "**/*.playwright.spec.js",
     "test/mocks/playwright/**/*",
-    "playwright.config.js"
+    "playwright.config.js",
+    "playwright-report/**/*"
   ],
   "compilerOptions": {
     "rootDir": "."
