fix: remove bad pnpm link info

--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
       "hd-scripts>@typescript-eslint/eslint-plugin": "catalog:",
       "hd-scripts>@typescript-eslint/parser": "catalog:",
       "eslint-config-standard-with-typescript>@typescript-eslint/eslint-plugin": "catalog:",
-      "eslint-config-standard-with-typescript>@typescript-eslint/parser": "catalog:",
-      "@storacha/blob-index": "link:"
+      "eslint-config-standard-with-typescript>@typescript-eslint/parser": "catalog:"
     }
-  },
-  "dependencies": {
-    "@storacha/blob-index": "link:"
   }
 }
