ui component for encryted uploads

--- a/nx.json
+++ b/nx.json
@@ -36,6 +36,9 @@
     }
   },
   "defaultBase": "main",
+  "sync": {
+    "applyChanges": true
+  },
   "release": {
     "projectsRelationship": "independent",
     "versionPlans": true,
