--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -32,6 +32,7 @@
     "@web3-storage/data-segment": "catalog:",
     "@storacha/did-mailto": "workspace:^",
     "@storacha/client": "workspace:^",
+    "@storacha/encrypt-upload-client": "workspace:^",
     "archy": "^1.0.0",
     "ariakit-utils": "catalog:",
     "blueimp-md5": "^2.19.0",
@@ -56,12 +57,17 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "autoprefixer": "catalog:",
+    "buffer": "^6.0.3",
+    "browserify-zlib": "^0.2.0",
     "eslint": "catalog:",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-next-on-pages": "1.6.3",
     "postcss": "catalog:",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
+    "util": "^0.12.5",
     "vercel": "33.2.0",
     "wrangler": "^3.11.0"
   },
