--- a/packages/ui/packages/react/tsconfig.json
+++ b/packages/ui/packages/react/tsconfig.json
@@ -12,6 +12,9 @@
       "path": "../core"
     },
     {
+      "path": "../../../capabilities"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
