fix(console): include only relevant proofs

--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -37,6 +37,7 @@
     "@ariakit/react-core": "catalog:",
     "@storacha/ui-core": "workspace:^",
     "@storacha/encrypt-upload-client": "workspace:^",
+    "@ucanto/core": "catalog:",
     "ariakit-react-utils": "catalog:"
   },
   "devDependencies": {
