--- a/packages/ui/packages/core/package.json
+++ b/packages/ui/packages/core/package.json
@@ -18,6 +18,12 @@
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "files": [
     "dist",
     "!dist/**/*.js.map"
