fix: add plan-get delegation to the decryption request (#372)
- We also need to include the `plan/get` delegation in the decryption
request - otherwise, the UCAN KMS server will reject the request because
it won't be able to verify if the user subscribed to a paid plan.
- ui-core and ui-react build fixes: 
  - included the nx/vite dependency 
  - run ui-react test after the build phase
  - fix exports in ui-core

--- a/packages/ui/packages/core/package.json
+++ b/packages/ui/packages/core/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "../../../../node_modules/.bin/tsc --build --emitDeclarationOnly --pretty --verbose",
@@ -17,6 +18,12 @@
     "lint:fix": "echo 'Linting in @storacha/ui-core is temporarily disabled while we resolve version issues.'",
     "test": "vitest run",
     "test:watch": "vitest watch"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
   "files": [
     "dist",
