fix: added missing mock

--- a/nx.json
+++ b/nx.json
@@ -44,7 +44,7 @@
     "versionPlans": true,
     "version": {
       "generatorOptions": {
-        "preserveLocalDependencyProtocols": true
+        "preserveLocalDependencyProtocols": false
       }
     },
     "changelog": {
