build(nx): revert preserveLocalDependencyProtocols: false

--- a/nx.json
+++ b/nx.json
@@ -44,7 +44,7 @@
     "versionPlans": true,
     "version": {
       "generatorOptions": {
-        "preserveLocalDependencyProtocols": false
+        "preserveLocalDependencyProtocols": true
       }
     },
     "changelog": {
