--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -20,19 +20,19 @@
     "@ipld/dag-json": "catalog:",
     "@ipld/dag-ucan": "catalog:",
     "@sentry/nextjs": "8.35.0",
+    "@storacha/access": "workspace:^",
+    "@storacha/capabilities": "workspace:^",
+    "@storacha/client": "workspace:^",
+    "@storacha/did-mailto": "workspace:^",
+    "@storacha/encrypt-upload-client": "workspace:^",
+    "@storacha/ui-react": "workspace:^",
     "@tailwindcss/postcss": "catalog:",
     "@ucanto/client": "catalog:",
     "@ucanto/core": "catalog:",
     "@ucanto/interface": "catalog:",
     "@ucanto/transport": "catalog:",
-    "@storacha/ui-react": "workspace:^",
-    "@storacha/access": "workspace:^",
-    "@storacha/capabilities": "workspace:^",
     "@web3-storage/content-claims": "catalog:",
     "@web3-storage/data-segment": "catalog:",
-    "@storacha/did-mailto": "workspace:^",
-    "@storacha/client": "workspace:^",
-    "@storacha/encrypt-upload-client": "workspace:^",
     "archy": "^1.0.0",
     "ariakit-utils": "catalog:",
     "blueimp-md5": "^2.19.0",
@@ -45,6 +45,7 @@
     "react-dom": "catalog:",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "react-qrcode-logo": "^4.0.0",
     "react-tooltip": "^5.28.0",
     "swr": "catalog:",
     "web3.storage": "^4.5.5"
@@ -57,8 +58,8 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "autoprefixer": "catalog:",
-    "buffer": "^6.0.3",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "eslint": "catalog:",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-next-on-pages": "1.6.3",
