feat: add globals.css export to package.json

--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -8,6 +8,13 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./globals.css": "./src/globals.css"
+  },
   "scripts": {
     "build": "tsc --build --pretty --verbose",
     "typecheck": "../../../../node_modules/.bin/tsc --build --emitDeclarationOnly --pretty --verbose",
