--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "next": "^14.0.0",
+    "next-themes": "^0.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
