feat: implement modular UI package architecture with subpath exports

--- a/packages/ui/packages/core/package.json
+++ b/packages/ui/packages/core/package.json
@@ -23,6 +23,10 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./service": {
+      "types": "./dist/service.d.ts",
+      "import": "./dist/service.js"
     }
   },
   "files": [
