fix: ucanto dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
   },
   "pnpm": {
     "overrides": {
+      "@ucanto/client": "catalog:",
+      "@ucanto/core": "catalog:",
+      "@ucanto/interface": "catalog:",
+      "@ucanto/principal": "catalog:",
+      "@ucanto/server": "catalog:",
+      "@ucanto/transport": "catalog:",
+      "@ucanto/validator": "catalog:",
       "hd-scripts>@typescript-eslint/eslint-plugin": "catalog:",
       "hd-scripts>@typescript-eslint/parser": "catalog:",
       "eslint-config-standard-with-typescript>@typescript-eslint/eslint-plugin": "catalog:",
