docs(examples): add headless, styled, and iframe auth examples

--- a/packages/ui/examples/react/sign-up-in/tsconfig.app.json
+++ b/packages/ui/examples/react/sign-up-in/tsconfig.app.json
@@ -3,6 +3,9 @@
   "include": ["src/**/*"],
   "references": [
     {
+      "path": "../../../packages/react-styled/tsconfig.lib.json"
+    },
+    {
       "path": "../../../packages/react/tsconfig.lib.json"
     },
     {
