--- a/packages/ui/examples/react/sign-up-in/tsconfig.json
+++ b/packages/ui/examples/react/sign-up-in/tsconfig.json
@@ -8,6 +8,9 @@
   },
   "references": [
     {
+      "path": "../../../packages/react-styled"
+    },
+    {
       "path": "../../../packages/react"
     },
     {
