--- a/packages/ui/packages/react-styled/package.json
+++ b/packages/ui/packages/react-styled/package.json
@@ -21,9 +21,7 @@
     "dev": "tsc --build --watch --preserveWatchOutput",
     "clean": "rm -rf dist *.tsbuildinfo",
     "lint": "echo 'Linting in @storacha/ui-react-styled is temporarily disabled while we resolve version issues.'",
-    "lint:fix": "echo 'Linting in @storacha/ui-react-styled is temporarily disabled while we resolve version issues.'",
-    "test": "vitest run",
-    "test:watch": "vitest watch"
+    "lint:fix": "echo 'Linting in @storacha/ui-react-styled is temporarily disabled while we resolve version issues.'"
   },
   "files": [
     "dist",
@@ -47,8 +45,7 @@
   "devDependencies": {
     "@types/react": "catalog:",
     "react": "catalog:",
-    "typescript": "catalog:",
-    "vitest": "catalog:"
+    "typescript": "catalog:"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
