--- a/packages/ui/packages/react/tsconfig.lib.json
+++ b/packages/ui/packages/react/tsconfig.lib.json
@@ -1,12 +1,15 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*"],
+  "compilerOptions": {
+    "baseUrl": "."
+  },
   "references": [
     {
-      "path": "../../../encrypt-upload-client/tsconfig.lib.json"
+      "path": "../core/tsconfig.lib.json"
     },
     {
-      "path": "../core/tsconfig.lib.json"
+      "path": "../../../encrypt-upload-client/tsconfig.lib.json"
     }
   ]
 }
