--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Install npm package dependencies
         run: pnpm install --frozen-lockfile
 
+      # Clean stale TypeScript build info files that prevent types.d.ts generation
+      - name: Clean stale build artifacts
+        run: |
+          find packages -name "*.tsbuildinfo" -delete
+          pnpm nx reset
+
       # pre-build console to get around some odd bugs that seem to be related to nx 21
       # TODO: Try to get rid of this later. If the build ever succeeds without
       # running this step first, it's working correctly, and we can delete this.
@@ -34,6 +40,7 @@ jobs:
         working-directory: ./packages/console
         run: |
           pnpm install
+          pnpm nx build @storacha/ui-core
           pnpm nx build @storacha/ui-react
           pnpm build
       
