refactor: initial work on migrating to Lit SDK v8

--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -74,12 +74,16 @@
     "@ipld/dag-json": "catalog:",
     "@ipld/dag-ucan": "catalog:",
     "@ipld/schema": "catalog:",
-    "@lit-protocol/auth-helpers": "^7.0.2",
-    "@lit-protocol/constants": "^7.0.2",
-    "@lit-protocol/contracts-sdk": "^7.0.2",
-    "@lit-protocol/encryption": "^7.0.2",
-    "@lit-protocol/lit-auth-client": "^7.0.3",
-    "@lit-protocol/lit-node-client": "^7.0.2",
+    "@lit-protocol/access-control-conditions": "^8.0.2",
+    "@lit-protocol/auth": "^8.1.1",
+    "@lit-protocol/auth-helpers": "^8.1.0",
+    "@lit-protocol/constants": "^8.0.4",
+    "@lit-protocol/contracts-sdk": "^7.3.1",
+    "@lit-protocol/encryption": "^7.3.1",
+    "@lit-protocol/lit-auth-client": "^7.3.1",
+    "@lit-protocol/lit-client": "^8.2.0",
+    "@lit-protocol/lit-node-client": "^7.3.1",
+    "@lit-protocol/networks": "^8.2.0",
     "@storacha/capabilities": "workspace:^",
     "@storacha/client": "workspace:^",
     "@storacha/upload-client": "workspace:^",
@@ -92,13 +96,15 @@
     "@ucanto/validator": "catalog:",
     "blockstore-core": "catalog:",
     "carstream": "catalog:",
-    "dotenv": "^16.4.7",
+    "dotenv": "catalog:",
     "ethers": "5.7.1",
     "ipfs-unixfs-exporter": "catalog:",
-    "multiformats": "catalog:"
+    "multiformats": "catalog:",
+    "viem": "^2.38.5"
   },
   "devDependencies": {
-    "@lit-protocol/types": "^7.0.8",
+    "@lit-protocol/schemas": "^8.0.2",
+    "@lit-protocol/types": "^8.0.2",
     "@playwright/test": "catalog:",
     "@storacha/eslint-config": "workspace:^",
     "esbuild": "^0.25.1",
